Soft Delete, Restore, Move (#24)